<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ManageFinance.Pro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_create_expense">Create Expense</string>
    <string name="action_create_income">Create Income</string>
    <string name="action_create_report">Create Report</string>
    <string name="action_create_setting">Create Setting</string>
    <string name="account">Account</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="report">Report</string>
    <string name="setting">Setting</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="title_activity_income">IncomeActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="newexpense">New Expense</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="action_settings">Settings</string>
    <string name="time">Thời gian</string>
    
    <!-- Text Button -->
    <string name="save">SAVE</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>

    <!-- lbTaiKhoan -->
    <string name="taikhoan">Tên tài khoản</string>
    <string name="hinttaikhoan">Tên tài khoản mới</string>

    <!-- lbMota -->
    <string name="mota">Mô tả</string>
    <string name="hintmota">Mô tả tài khoản</string>

    <!-- lbSoTien -->
    <string name="sotien">Số tiền</string>
    <string name="title_activity_expenses">ExpensesActivity</string>

    <!-- spinner dsTaiKhoan -->
    <string name="dsTaiKhoan">Tài khoản</string>
    <string name="title_activity_create_income">CreateIncome</string>
    <string name="title_activity_update_delete_account">UpdateDeleteAccount</string>

</resources>