<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    tools:context="bkap.android.managefinance.pro.CreateAccount" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="46dp"
                android:minHeight="46dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="46dp"
                    android:gravity="center"
                    android:text="@string/mota"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/textsize" />

                <EditText
                    android:id="@+id/txtMotaChi"
                    android:layout_width="190dp"
                    android:layout_height="46dp"
                    android:gravity="center"
                    android:hint="@string/hinttaikhoan"
                    android:paddingLeft="15dp"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/textcolorhint"
                    android:textSize="@dimen/textsize" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="46dp" >

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="46dp"
                    android:gravity="center"
                    android:text="@string/dsTaiKhoan"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/textsize" />

                <Spinner
                    android:id="@+id/dsTaiKhoan"
                    android:layout_width="190dp"
                    android:layout_height="46dp"
                    android:paddingLeft="15dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="46dp" >

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="46dp"
                    android:gravity="center"
                    android:text="@string/sotien"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/textsize" />

                <EditText
                    android:id="@+id/txtSoTienChi"
                    android:layout_width="190dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/textsize" />

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="46dp"
                    android:gravity="center_vertical"
                    android:text="$"
                    android:textColor="@color/textcolor" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnSaveExpense"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="2dp"
        android:background="@drawable/custombutton"
        android:minHeight="46dp"
        android:text="@string/save"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/LinearUpdateDeleteExpense"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/btnUpdateExpense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:minHeight="46dp"
            android:text="@string/update" />

        <Button
            android:id="@+id/btnDeleteExpense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:minHeight="46dp"
            android:text="@string/delete" />
    </LinearLayout>

</RelativeLayout>